fix: nav menu alignment and remove outside-click handler from nav. (#277)
* refactor(user): remove outside-click handler

* refactor(layout): remove outside click handler

* fix: failing test

* fix: navbar alignment

* refactor: remmove dependancy

--- a/packages/layout/src/assets/css/components/app-header.css
+++ b/packages/layout/src/assets/css/components/app-header.css
@@ -37,7 +37,7 @@ header > nav .main-menu {
   grid-area: main-menu;
 }
 
-header > nav .locales {
+header > nav .locale-switcher {
   grid-area: locales;
 }
 
